--- a/ilBelloDelleDonne2.0/src/main/webapp/resources/styles/bdd.css
+++ b/ilBelloDelleDonne2.0/src/main/webapp/resources/styles/bdd.css
@@ -80,7 +80,7 @@ input[type=submit]{
 	border-radius:10px;
 }
 
-input[type=text], input[type=password], input[type=date], input[type=time],input[type=email]{
+input[type=text], input[type=password], input[type=date], input[type=time],input[type=email],select{
 	width:250px;
 	height:30px;	
 	color:#9394fe;
