--- a/ilBelloDelleDonne2.0/src/main/webapp/resources/template/footer.html
+++ b/ilBelloDelleDonne2.0/src/main/webapp/resources/template/footer.html
@@ -1,6 +1,6 @@
-<hr />
 <br>
-il bello delle donne di Pane Eleonora, C.so Mazzini, 11, Cosenza. P.IVA
+<br>
+il bello delle donne di xxxxxxxxxx xxxxxx, C.so Mazzini, 11, Cosenza. P.IVA
 ****************
 <br>
-sito interamente realizzato da CAGVINFOtech
+sito realizzato da Cristiano Giuseppe e Algieri Vincenzo.
